tests-integration/tests/snapshots/resolving__001_local_resolution_implicit.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module Implicit

Unqualified Imports:

Qualified Imports:

Exported Terms:
  - value
  - HiddenType
  - Just
  - Id
  - Nothing
  - HiddenConstructor
  - eq

Exported Types:
  - HiddenConstructor
  - HiddenType
  - Id
  - Eq
  - Synonym
  - Maybe

Local Terms:
  - value
  - eqMaybe
  - eqId
  - eq
  - HiddenType
  - Just
  - Id
  - Nothing
  - HiddenConstructor

Local Types:
  - HiddenConstructor
  - HiddenType
  - Id
  - Eq
  - Synonym
  - Maybe

Errors:
