tests-integration/tests/snapshots/resolving__002_import_resolution_import_for_local_only.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module ImportForLocalOnly

Unqualified Imports:

Terms:
  - libFn is Explicit

Types:

Terms:
  - Id is Explicit

Types:
  - Id is Explicit

Qualified Imports:

Exported Terms:
  - Id

Exported Types:
  - Id

Local Terms:

Local Types:

Errors:
