tests-integration/tests/snapshots/resolving__002_import_resolution_import_hidden_constructor.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module ImportHiddenConstructor

Unqualified Imports:

Terms:

Types:
  - Hidden is Explicit

Qualified Imports:

Exported Terms:

Exported Types:

Local Terms:

Local Types:

Errors:
