tests-integration/tests/snapshots/resolving__002_import_resolution_import_qualified_explicit.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module ImportQualifiedExplicit

Unqualified Imports:

Qualified Imports:

L Terms:
  - MkLibTy is Explicit
  - Ctor3 is Explicit
  - libFn is Explicit
  - Ctor1 is Explicit

L Types:
  - LibTy is Explicit
  - MultiTy is Explicit
  - TypeOnly is Explicit

Exported Terms:
  - libFn
  - MkLibTy
  - Ctor1
  - Ctor3

Exported Types:
  - LibTy
  - MultiTy
  - TypeOnly

Local Terms:

Local Types:

Errors:
