tests-integration/tests/snapshots/resolving__002_import_resolution_import_unqualified_hiding.snap
---
source: tests-integration/tests/resolving.rs
expression: report
snapshot_kind: text
---
module ImportUnqualifiedHiding

Unqualified Imports:

Terms:
  - MkLibTy is Implicit
  - Ctor3 is Implicit
  - libFn is Implicit
  - Ctor1 is Implicit

Types:
  - LibTy is Implicit
  - TypeOnly is Implicit

Qualified Imports:

Exported Terms:
  - libFn
  - MkLibTy
  - Ctor1
  - Ctor3

Exported Types:
  - LibTy
  - TypeOnly

Local Terms:

Local Types:

Errors:
